--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "slim/psr7": "^1.6",
         "slim/http": "^1.3",
         "slim/php-view": "^3.2",
-        "php-di/php-di": "^7.0"
+        "php-di/php-di": "^7.0",
+        "illuminate/database": "^10.18"
     }
 }
