--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "slim/http": "^1.3",
         "slim/php-view": "^3.2",
         "php-di/php-di": "^7.0",
-        "illuminate/database": "^10.18"
+        "illuminate/database": "^10.18",
+        "slim/twig-view": "^3.3"
     }
 }
