--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "slim/php-view": "^3.2",
         "php-di/php-di": "^7.0",
         "illuminate/database": "^10.18",
-        "slim/twig-view": "^3.3"
+        "slim/twig-view": "^3.3",
+        "slim/flash": "^0.4.0"
     }
 }
